Added e2e test and api server mocking algo

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.DS_Store
+*/.DS_Store
+
 # IDE stuff
 .zed/
 pyrightconfig.json
