Added naive implemention, walking skeleton ready

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,7 @@ jobs:
           make lint
       - name: Test
         run: |
+          make test
           make test > pytest-coverage.txt
 
       - name: Comment coverage
