--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,8 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
       - name: Fetch all tags
         run: git fetch --tags
@@ -43,36 +44,36 @@ jobs:
         id: tag_generator
         run: |
            # Strip git ref prefix from version
-          if [[ "$GITHUB_REF_NAME" == "master" ]]; then
-            BRANCH="MS"
-          else
-            BRANCH="BR"
-          fi
+            if [[ "$GITHUB_REF_NAME" == "master" ]]; then
+              BRANCH="MS"
+            else
+              BRANCH="BR"
+            fi
 
-          # Get current date
-          DATE=$(date +%Y-%m-%d)
+            # Get current date
+            DATE=$(date +%Y-%m-%d)
 
-          # Use GITHUB running build number
-          REVISION_NUMBER=$GITHUB_RUN_NUMBER
+            # Use GITHUB running build number
+            REVISION_NUMBER=$GITHUB_RUN_NUMBER
 
-          # Use this to determine the version string
-          NEW_TAG="${DATE}_${REVISION_NUMBER}-${BRANCH}"
+            # Use this to determine the version string
+            NEW_TAG="${DATE}_${REVISION_NUMBER}-${BRANCH}"
 
-          # Push a new tag back to the repository
-          git tag $NEW_TAG
-          git push origin $NEW_TAG
+            # Push a new tag back to the repository
+            git tag $NEW_TAG
+            git push origin $NEW_TAG
 
-          # Set the new tag as output of this step
-          echo "tag=${NEW_TAG}" >> $GITHUB_OUTPUT
+            # Set the new tag as output of this step
+            echo "tag=${NEW_TAG}" >> $GITHUB_OUTPUT
 
       - name: Build the Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/checkpoint-placer:${{ steps.release_name.outputs.tag }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/checkpoint-placer:${{ steps.tag_generator.outputs.tag }} .
 
       - name: Log in to Docker Hub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Push the Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/checkpoint-placer:${{ steps.release_name.outputs.tag }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/checkpoint-placer:${{ steps.tag_generator.outputs.tag }}
 
       - name: Create Release
         id: create_release
@@ -80,6 +81,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.release_name.outputs.tag }}
-          release_name: Release ${{ steps.release_name.outputs.tag }}
+          tag_name: ${{ steps.tag_generator.outputs.tag }}
+          release_name: Release ${{ steps.tag_generator.outputs.tag }}
           draft: false
